--- a/css/main.css
+++ b/css/main.css
@@ -31,30 +31,60 @@ body {
 
 /* iPad Pro PORTRAIT */
 @media screen and (max-width: 1024px) {
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
 /* iPad Pro LANDSCAPE*/
 @media only screen and (min-device-width : 1024px) and (max-device-width : 1366px) and (orientation : landscape) {
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
 /* iPad PORTRAIT*/
 @media screen and (max-width: 769px) {
 }
 /* iPad LANDSCAPE*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
 /* iPhone 6/7/8 Plus PORTRAIT */
 @media screen and (max-width: 414px) {
 }
 /* iPhone 6/7/8 Plus LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 736px) and (orientation : landscape) {
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
 /* Pixel 2 & Pixel 2 XL PORTRAIT */
 @media screen and (max-width: 412px) {
 }
 /* Pixel 2 LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 731px) and (orientation : landscape) {
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
 /* Pixel 2 XL LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 823px) and (orientation : landscape) {
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
 /* iPhone 6/7/8 & iPhone X PORTRAIT */
 @media screen and (max-width: 400px) {
@@ -66,26 +96,49 @@ body {
 }
 /* iPhone 6/7/8 LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 667px) and (orientation : landscape) {
-
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
 /* Iphone X LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 822px) and (orientation : landscape) {
-
-    
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
 /* Galaxy S5 PORTRAIT */
 @media screen and (max-width: 375px) {
-
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
 /* Galaxy S5 LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 640px) and (orientation : landscape) {
-
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
 /* iPhone 5/SE PORTRAIT */
 @media screen and (max-width: 330px) {
-
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
 /* iPhone 5/SE LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 568px) and (orientation : landscape) {
-
+    .banner{
+        width: 112.5%;
+        margin-left: -6.25%;
+        margin-top: 5%
+    }
 }
