--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
     background: url('../assets/background.png');
     width: 100vw;
     overflow-x: hidden;
+    margin: 0;
 }
 
 .black-box {
