--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,18 @@
 @import url('./angle-divs.css');
 
+html {
+    margin:0;
+    padding: 0;
+    overflow-x: hidden
+}
+
 body {
     color: white;
     background: url('../assets/background.png');
     width: 100vw;
     overflow-x: hidden;
     margin: 0;
+    padding: 0
 }
 
 .black-box {
