--- a/css/angle-divs.css
+++ b/css/angle-divs.css
@@ -55,6 +55,7 @@
 .top-right-slant {
     height: 35vh;
     background-color: #92278f;
+    /* padding-top: 5% */
     z-index: 3;
 }
 
@@ -115,7 +116,7 @@
         right: 0;
         transform: skewY(-1deg);
         transform-origin: -250%;
-        /* z-index: -1; */
+        z-index: -1;
         border-top: 4pt solid black;
     }
 }
