--- a/css/angle-divs.css
+++ b/css/angle-divs.css
@@ -53,9 +53,9 @@
 
 
 .top-right-slant {
-    height: 35vh;
+    min-height: 35vh;
     background-color: #92278f;
-    /* padding-top: 5% */
+    padding-top: 2.5%;
     z-index: 3;
 }
 
@@ -70,7 +70,7 @@
     right: 0;
     transform: skewY(2deg);
     transform-origin: -50%;
-    /* z-index: 2; */
+    z-index: -1;
     border-bottom: 4pt solid black;
 }
 
