--- a/css/main.css
+++ b/css/main.css
@@ -13,32 +13,14 @@ body {
     width: 100vw;
     overflow-x: hidden;
     margin: 0;
-    padding: 0
+    padding: 0;
+    font-family: 'Comic Neue', cursive;
 }
 
 .hidden {
     display:none;
     margin: 0;
     padding: 0
-}
-
-.black-box {
-    /* margin: 25%; */
-    background-color: black;
-    width: 40%;
-    padding-top: 40%;
-    border-radius: 10%;
-    position: relative;
-    min-width: 50px;
-    min-height: 50px;
-}
-
-.black-box-text {
-    position: absolute;
-    top:0;
-    left:0;
-    bottom:0;
-    right:0;
 }
 
 .banner {
