changed some colors

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Comic Neue', cursive;
+    /* font-family: 'Shadows Into Light', cursive; */
 }
 
 .hidden {
@@ -47,9 +48,13 @@ body {
 
 .card {
     margin-bottom: 10%;
-    background-color: slategray
+    background-color: #fb9822
 }
 
+#social{
+    background-color: #92278f;
+    border-radius: 10px
+}
 
 .overflow-scroll {
     max-height: 100%;
