--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,10 @@ body {
 }
 
 
-
+.input-sizing {
+    margin: 2.5%;
+    /* width: 75% */
+}
 
 
 
@@ -135,6 +138,9 @@ body {
     .bottom-about {
         margin-top: 7.5%
     }
+    .bottom-right-slant {
+        padding-top: 0;
+    }
 }
 /* iPhone 6/7/8 Plus LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 736px) and (orientation : landscape) {
@@ -162,6 +168,9 @@ body {
     }
     .bottom-about {
         margin-top: 7.5%
+    }
+    .bottom-right-slant {
+        padding-top: 0;
     }
 }
 /* Pixel 2 LANDSCAPE */
@@ -203,6 +212,9 @@ body {
     .social-links {
         padding-top:10%;
         text-align: center
+    }
+    .bottom-right-slant {
+        padding-top: 0;
     }
 }
 /* iPhone 6/7/8 LANDSCAPE */
