--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,10 @@ body {
     .bottom-about {
         margin-top: 7.5%
     }
+    .social-links {
+        padding-top:10%;
+        text-align: center
+    }
 }
 /* iPad Pro LANDSCAPE*/
 @media only screen and (min-device-width : 1024px) and (max-device-width : 1366px) and (orientation : landscape) {
@@ -112,6 +116,10 @@ body {
     }
     .bottom-about {
         margin-top: 7.5%
+    }
+    .social-links {
+        padding-top:10%;
+        text-align: center
     }
 }
 /* iPad LANDSCAPE*/
@@ -140,6 +148,10 @@ body {
     }
     .bottom-right-slant {
         padding-top: 0;
+    }
+    .social-links {
+        padding-top:10%;
+        text-align: center
     }
 }
 /* iPhone 6/7/8 Plus LANDSCAPE */
@@ -171,6 +183,10 @@ body {
     }
     .bottom-right-slant {
         padding-top: 0;
+    }
+    .social-links {
+        padding-top:10%;
+        text-align: center
     }
 }
 /* Pixel 2 LANDSCAPE */
@@ -252,6 +268,10 @@ body {
     .bottom-about {
         margin-top: 7.5%
     }
+    .social-links {
+        padding-top:10%;
+        text-align: center
+    }
 }
 /* Galaxy S5 LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 640px) and (orientation : landscape) {
@@ -276,6 +296,10 @@ body {
     }
     .bottom-about {
         margin-top: 7.5%
+    }
+    .social-links {
+        padding-top:10%;
+        text-align: center
     }
 }
 /* iPhone 5/SE LANDSCAPE */
