--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@ body {
     background-color: #fb9822
 }
 
-#social{
+#social {
     background-color: #92278f;
     border-radius: 10px;
     /* margin-top:5%; */
@@ -72,7 +72,14 @@ body {
     /* width: 75% */
 }
 
+.about-pod {
+    margin-top: 2.5%;
+}
 
+
+/* .bottom-about {
+    padding-top:20%
+} */
 
 
 /* iPad Pro PORTRAIT */
