--- a/css/main.css
+++ b/css/main.css
@@ -8,9 +8,11 @@ html {
 }
 
 body {
-    color: white;
+    /* color: white; */
     background: url('../assets/background.png');
+    background-repeat: repeat;
     width: 100vw;
+    height: 100vh;
     overflow-x: hidden;
     margin: 0;
     padding: 0;
@@ -25,298 +27,84 @@ body {
 }
 
 .banner {
-    width: 65%
+  width: 75%;
+  min-width: 375px;
 }
 
-.left-section {
-    border-right: 2pt solid black;
-}
-
-.right-section {
-    border-left: 2pt solid black;
-}
-
-.external-links {
-    color: white;
-    text-decoration: none;
-}
-
-.external-links:hover{
-    color: gainsboro;
-    text-decoration: underline;
-}
-
-.card {
-    margin-bottom: 10%;
-    background-color: #fb9822
-}
-
-#social {
-    background-color: #92278f;
-    border-radius: 10px;
-    /* margin-top:5%; */
-}
-
-.overflow-scroll {
-    max-height: 100%;
-    overflow-y: scroll;
-}
-
-.social-links {
-    text-align: center;
+.navigation {
+  position: absolute;
+  bottom:0;
 }
 
 
-.input-sizing {
-    margin: 2.5%;
-    /* width: 75% */
+.offcanvas {
+  color: whitesmoke;
+  background-color: #333333;
 }
 
-.about-pod {
-    margin-top: 2.5%;
-}
-
-
-/* .bottom-about {
-    padding-top:20%
-} */
 
 
 /* iPad Pro PORTRAIT */
 @media screen and (max-width: 1024px) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
-    .bottom-about {
-        margin-top: 7.5%
-    }
-    .social-links {
-        padding-top:10%;
-        text-align: center
-    }
+    
 }
 /* iPad Pro LANDSCAPE*/
 @media only screen and (min-device-width : 1024px) and (max-device-width : 1366px) and (orientation : landscape) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
+    
 }
 /* iPad PORTRAIT*/
 @media screen and (max-width: 769px) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
-    .bottom-about {
-        margin-top: 7.5%
-    }
-    .social-links {
-        padding-top:10%;
-        text-align: center
-    }
+    
 }
 /* iPad LANDSCAPE*/
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
+    
 }
 /* iPhone 6/7/8 Plus PORTRAIT */
 @media screen and (max-width: 414px) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
-    .bottom-about {
-        margin-top: 7.5%
-    }
-    .bottom-right-slant {
-        padding-top: 0;
-    }
-    .social-links {
-        padding-top:10%;
-        text-align: center
-    }
+    
 }
 /* iPhone 6/7/8 Plus LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 736px) and (orientation : landscape) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
-    .bottom-about {
-        margin-top: 7.5%
-    }
+    
 }
 /* Pixel 2 & Pixel 2 XL PORTRAIT */
 @media screen and (max-width: 412px) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
-    .bottom-about {
-        margin-top: 7.5%
-    }
-    .bottom-right-slant {
-        padding-top: 0;
-    }
-    .social-links {
-        padding-top:10%;
-        text-align: center
-    }
+    
 }
 /* Pixel 2 LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 731px) and (orientation : landscape) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
+    
 }
 /* Pixel 2 XL LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 823px) and (orientation : landscape) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
+    
 }
 /* iPhone 6/7/8 & iPhone X PORTRAIT */
 @media screen and (max-width: 400px) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
-    .bottom-about {
-        margin-top: 7.5%
-    }
-
-    .social-links {
-        padding-top:10%;
-        text-align: center
-    }
-    .bottom-right-slant {
-        padding-top: 0;
-    }
+    
 }
 /* iPhone 6/7/8 LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 667px) and (orientation : landscape) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
+    
 }
 /* Iphone X LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 822px) and (orientation : landscape) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
+    
 }
 /* Galaxy S5 PORTRAIT */
 @media screen and (max-width: 375px) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
-    .bottom-about {
-        margin-top: 7.5%
-    }
-    .social-links {
-        padding-top:10%;
-        text-align: center
-    }
+    
 }
 /* Galaxy S5 LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 640px) and (orientation : landscape) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
+    
 }
 /* iPhone 5/SE PORTRAIT */
 @media screen and (max-width: 330px) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
-    .bottom-about {
-        margin-top: 7.5%
-    }
-    .social-links {
-        padding-top:10%;
-        text-align: center
-    }
+    
 }
 /* iPhone 5/SE LANDSCAPE */
 @media only screen and (min-device-width : 411px) and (max-device-width : 568px) and (orientation : landscape) {
-    .banner{
-        width: 112.5%;
-        margin-left: -6.25%;
-        margin-top: 5%
-    }
-    .left-section, .right-section {
-        border: none;
-    }
+    
 }
