--- a/css/main.css
+++ b/css/main.css
@@ -46,7 +46,7 @@ body {
 }
 
 footer {
-  position:absolute;
+  position:fixed;
   bottom:0;
   background-color: #fde0cd;
   width: 100%;
@@ -55,5 +55,16 @@ footer {
 
 .footer-placement {
   text-align: center;
-  padding-top: 5px
+  padding-top: 5px;
+}
+
+/* .body {
+  overflow-y: scroll;
+} */
+
+
+@media only screen and (max-width: 600px) {
+  .body {
+    margin-bottom: 80px;
+  }
 }
